[package]
name = "eth-prover"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
eth-types =  { path = "../eth-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-sdk = "0.11.0"
borsh = "0.6.2"
rlp = "0.4.2"
hex = "0.4.2"

[dev-dependencies]
hex = "0.4.2"
indicatif = "0.14"
lazy_static = "*"
near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
near-runtime-standalone = { git = "https://github.com/nearprotocol/nearcore.git" }

[features]
expensive_tests = []
