[workspace]

members = [
    "contract_wrapper",
    "eth2-contract-init",
    "eth2near-block-relay-rs",
    "eth_rpc_client",
    "finality-update-verify",
    "logger",
    "utilities",
]

[workspace.dependencies]
bls = { git = "https://github.com/sigp/lighthouse.git", tag = "v4.6.0-rc.0" }
types =  { git = "https://github.com/sigp/lighthouse.git", tag = "v4.6.0-rc.0" }
merkle_proof = { git = "https://github.com/sigp/lighthouse.git", tag = "v4.6.0-rc.0" }
tree_hash = "0.5"
tree_hash_derive = "0.5"
ethereum_ssz = "0.5"
ethereum_hashing = "1.0.0-beta.2"
smallvec = "1.11.0"
