[workspace]
resolver = "2"

members = [
    "contract_wrapper",
    "eth2-contract-init",
    "eth2near-block-relay-rs",
    "eth_rpc_client",
    "finality-update-verify",
    "logger",
    "utilities",
]

[workspace.dependencies]
bls = { git = "https://github.com/Near-One/lighthouse", branch = "v7.0.0-beta.2-pub-block-tree" }
types =  { git = "https://github.com/Near-One/lighthouse", branch = "v7.0.0-beta.2-pub-block-tree" }
merkle_proof = { git = "https://github.com/Near-One/lighthouse", branch = "v7.0.0-beta.2-pub-block-tree" }
tree_hash = "0.8"
tree_hash_derive = "0.8"
ethereum_ssz = "0.7"
ethereum_hashing = "0.7.0"
smallvec = "1.11.0"
tokio = { version = "1.27", features = ["full"] }
near-jsonrpc-client = "0.16.0"
near-crypto = "0.29.1"
near-primitives = "0.29.1"
near-chain-configs = "0.29.1"
near-jsonrpc-primitives = "0.29.1"
borsh = { version = "1.5.7", features = ["unstable__schema"] }
near-sdk = { version = "5.13.0", features = ["legacy", "unit-testing"] }


