[package]
name = "eth-bridge"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types =  { path = "../ethtypes" }
near-bindgen = { path = "../../near-bindgen/near-bindgen" }
borsh = "0.2.10"
wee_alloc = "0.4.5"
rlp = "0.4.2"
ethereum-types = "0.8.0"
futures = "0.1.26"
primal = "0.2.3"
arrutil = "0.1.2"
ethash = { git = "https://github.com/nearprotocol/rust-ethash" }
#ethash = { path = "../../rust-ethash" }
serde_derive = "1.0.104"
hex = "0.4.0"
rustc-hex = "2.1.0"

[dev-dependencies]
web3 = "0.8.0"
lazy_static = "1.4.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[features]
default = []

[workspace]
members = []
