[package]
name = "eth-types"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-bindgen = { path = "../../near-bindgen/near-bindgen" }
borsh = "0.2.10"
rlp = "0.4.2"
rlp_derive = { git = "https://github.com/paritytech/parity-ethereum/" }
ethereum-types = "0.8.0"
derive_more = "^0.99.2"
