[package]
name = "relayer"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
eth2 = { git = "https://github.com/sigp/lighthouse", tag = "v7.0.1" }
types = { git = "https://github.com/sigp/lighthouse", tag = "v7.0.1" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", tag = "v7.0.1" }

eth-types = { path = "../contracts/near/eth-types/" }
eth2-utility = { path = "../contracts/near/eth2-utility/" }

tokio = { version = "1.45.1", features = ["full"] }
borsh = { version = "1.5.7", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
hex = "0.4.3"
alloy = { version = "0.12", default-features = false, features = ["providers", "rpc", "rpc-types", "transports", "reqwest"] }
url = "2.5.4"
near-crypto = "0.30.1"
tracing = "0.1.41"
near-fetch = { git = "https://github.com/r-near/fetch", branch = "main" }
near-primitives = "0.30.1"
color-eyre = "0.6.5"
tree_hash = "0.8"
tree_hash_derive = "0.8"
near-gas = "0.3.0"

[dev-dependencies]
anyhow = "1.0.98"
near-workspaces = { version = "0.20.1", features = ["unstable"] }
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"

