[workspace]
members = [
    "eth2-client",
    "eth-client",
    "eth-prover",
    "eth-types",
    "admin-controlled"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", branch = "bls-support" }
borsh = "0.9.3"
rlp = "0.5.2"
rlp-derive = "0.1.0"
ethereum-types = "0.14.1"
tree_hash = "0.5"
tree_hash_derive = "0.5"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"
ethereum_serde_utils = "0.5"
ethereum_hashing = "1.0.0-beta.2"
derive_more = "^0.99.2"
hex = "0.4.2"
bitvec = "1.0.0"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.5.0" }

[patch]
[patch.crates-io]
ethereum_hashing = { path = "eth2_hashing" }
ethereum-types = { git = "https://github.com/aurora-is-near/parity-common", tag = "v0.14.1-wasm" }
rlp = { git = "https://github.com/aurora-is-near/parity-common", tag = "v0.14.1-wasm" }
rlp-derive = { git = "https://github.com/aurora-is-near/parity-common", tag = "v0.14.1-wasm" }
