[workspace.package]
authors = ["Near One <info@nearone.org>"]
repository = "https://github.com/Near-One/rainbow-bridge"

[workspace]
members = [
    "eth2-client",
    "eth-prover",
    "eth-types"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
near-sdk = { version = "5.12", features = ["legacy", "unit-testing"] }
borsh = { version = "1.5.7", features = ["unstable__schema"] }
near-sdk = { version = "5.13.0", features = ["legacy", "unit-testing"] }
borsh = "1"
rlp = "0.5.2"
rlp-derive = "0.1.0"
ethereum-types = "0.14.1"
tree_hash = "0.8"
tree_hash_derive = "0.8"
ethereum_ssz = "0.7"
ethereum_ssz_derive = "0.7"
ethereum_serde_utils = "0.7"
ethereum_hashing = "0.7.0"
derive_more = "^0.99.2"
hex = "0.4.2"
bitvec = "1.0.0"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.1" }

[patch]
[patch.crates-io]
ethereum_hashing = { path = "eth2_hashing" }
ethereum-types = { git = "https://github.com/aurora-is-near/parity-common", tag = "v0.14.1-wasm" }
rlp = { git = "https://github.com/aurora-is-near/parity-common", tag = "v0.14.1-wasm" }
rlp-derive = { git = "https://github.com/aurora-is-near/parity-common", tag = "v0.14.1-wasm" }
