[package]
name = "contract_wrapper"
version = "0.3.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
async-std = "1.12.0"
near-sdk = "5.12.0"
near-jsonrpc-client = "0.5.0"
near-crypto = "0.16.0"
near-primitives = "0.16.0"
near-chain-configs = "0.16.0"
near-jsonrpc-primitives = "0.16.0"
tokio = { version = "1.19.0", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
eth-types = { path = "../../contracts/near/eth-types/" }
eth2-utility = { path = "../../contracts/near/eth2-utility/" }
workspaces = { version = "0.7", optional = true }

[dev-dependencies]
futures = "0.3.21"
anyhow = "1.0"

[features]
sandbox = ["workspaces"]
