[package]
name = "contract_wrapper"
version = "0.3.0"
edition = "2021"

[dependencies]
borsh.workspace = true
async-std = "1.12.0"
near-sdk.workspace = true
near-jsonrpc-client.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-chain-configs.workspace = true
near-jsonrpc-primitives.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
eth-types = { path = "../../contracts/near/eth-types/" }
eth2-utility = { path = "../../contracts/near/eth2-utility/" }
near-workspaces = "0.18"

[dev-dependencies]
futures = "0.3.21"
anyhow = "1.0"

[features]
default = []
sandbox = []