[package]
name = "eth2-contract-init"
version = "0.3.0"
edition = "2021"

[dependencies]
tree_hash = { workspace = true }
types = { workspace = true }
eth2_to_near_relay = { path = "../eth2near-block-relay-rs"}
eth_rpc_client = { path = "../eth_rpc_client" }
eth-types = { path = "../../contracts/near/eth-types/" }
eth2-utility = { path = "../../contracts/near/eth2-utility" }
contract_wrapper = { path = "../contract_wrapper" }
log = { version = "0.4", features = ["std", "serde"] }
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
near-sdk.workspace = true
near-primitives.workspace = true
eth2near-logger = { path = "../logger" }
dotenv = "0.15.0"
near-workspaces = "0.18"

[dev-dependencies]
tokio.workspace = true
contract_wrapper = { path = "../contract_wrapper" }
