[package]
name = "eth2_to_near_relay"
version = "0.3.0"
edition = "2021"

[dependencies]
smallvec = "1"
types = { workspace = true }
tree_hash = { workspace = true }
merkle_proof = { workspace = true }
ethereum_hashing = { workspace = true }
ethereum_ssz = { workspace = true }
eth-types = { path = "../../contracts/near/eth-types/" }
eth2-utility  = { path = "../../contracts/near/eth2-utility" }

contract_wrapper = { path = "../contract_wrapper" }
finality-update-verify = { path = "../finality-update-verify" }

log = { version = "0.4", features = ["std", "serde"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
ethereum-types = { version = "0.14.1", features = ["rlp", "serialize"],  default-features = false }
reqwest = { version = "0.12", features = ["blocking"] }
eth_rpc_client = { path = "../eth_rpc_client" }
clap = { version = "3.1.6", features = ["derive"] }
tokio.workspace = true
env_logger = "0.9.0"
borsh.workspace = true
near-sdk.workspace = true
futures = { version = "0.3.21", default-features = false }
async-std = "1.12.0"
hex = "0.4.3"
toml = "0.5.9"
atomic_refcell = "0.1.8"
bitvec = "1.0.0"
eth2near-logger = { path = "../logger" }
primitive-types = "0.12.1"

near-jsonrpc-client.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-chain-configs.workspace = true
near-jsonrpc-primitives.workspace = true

prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
warp = "0.3"
dotenv = "0.15.0"

[dev-dependencies]
eth2-contract-init = { path = "../eth2-contract-init" }
contract_wrapper = { path = "../contract_wrapper" }
