[package]
name = "finality-update-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
eth-types = { path ="../../contracts/near/eth-types/", features = ["eip1559"]}
bls = { git = "https://github.com/aurora-is-near/lighthouse.git",  rev = "ec55f0b8eb997c80364f01afef74114ce139bcae" }
eth2-utility  = { path ="../../contracts/near/eth2-utility"}
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git",  rev = "ec55f0b8eb997c80364f01afef74114ce139bcae" }
types =  { git = "https://github.com/aurora-is-near/lighthouse.git",  rev = "ec55f0b8eb997c80364f01afef74114ce139bcae" }
bitvec = "1.0.0"

[dev-dependencies]
eth2_to_near_relay = { path = "../eth2near-block-relay-rs"}
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"