[package]
name = "finality-update-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
bls = { workspace = true }
tree_hash = { workspace = true }
types =  { workspace = true }
eth-types = { path ="../../contracts/near/eth-types/" }
eth2-utility  = { path ="../../contracts/near/eth2-utility"}
bitvec = "1.0.0"

[dev-dependencies]
eth2_to_near_relay = { path = "../eth2near-block-relay-rs"}
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"