[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
hex = { version="0.4", features = ["serde"] }
num-traits = "0.2"
cita_trie = "5.0.1"
hasher = "0.1.4"
rlp = "0.5.2"
