[package]
name = "btc-client"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-bindgen = "0.4.1"
near-sdk = "0.9.2"
borsh = "0.2.10"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
rlp = "0.4.2"
futures = "0.1.26"
primal = "0.2.3"
arrutil = "0.1.2"
hex = "0.4.0"
byteorder = "1.3.1"

[dev-dependencies]
web3 = "0.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
default = []
