[package]
name = "eth-client"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types =  { path = "../eth-types" }
near-bindgen = "0.4.1"
borsh = "0.2.10"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
rlp = "0.4.2"
ethereum-types = "0.8.0"
futures = "0.1.26"
primal = "0.2.3"
arrutil = "0.1.2"
ethash = { git = "https://github.com/nearprotocol/rust-ethash" }
hex = "0.4.0"
rustc-hex = "2.1.0"

[dev-dependencies]
web3 = "0.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
default = []
