[package]
name = "eth-prover"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
eth-types =  { path = "../eth-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-bindgen = "0.4.2"
borsh = "0.2.10"
rlp = "0.4.2"

[dev-dependencies]
hex = "0.4.2"

[features]
default = []
