[package]
name = "eth-types"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
near-bindgen = "0.4.1"
borsh = "0.2.10"
rlp = "0.4.2"
rlp-derive = "0.1.0"
ethereum-types = "0.8.0"
derive_more = "^0.99.2"
