[package]
name = "mintable-fungible-token"
version = "0.2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
eth-types =  { path = "../eth-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-sdk = "0.11.0"
borsh = "0.6.2"
rlp = "0.4.2"
ethabi = "12.0.0"
hex = "0.4.2"
