[package]
name = "eth-types"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
near-sdk = "0.11.0"
borsh = "0.6.2"
rlp = "0.4.2"
rlp-derive = "0.1.0"
ethereum-types = "0.9.2"
derive_more = "^0.99.2"
