[package]
name = "eth-client"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types =  { path = "../eth-types", default-features = false }
admin-controlled =  { path = "../admin-controlled" }
near-sdk = "4.1.1"
borsh = "0.9.3"
rlp = "0.5.2"
primal = "0.2.3"
arrutil = "0.1.2"
ethash = { git = "https://github.com/aurora-is-near/rust-ethash", rev = "a27b2c7217f74c4470d7cd0b26b41b58431a26ee", default-features = false }
hex = "0.4.0"
rustc-hex = "2.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# serde's Serialize and Deserialize traits are required for `near_bindgen` macro for non-wasm32 targets
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = "1.19"
primitive-types = { version = "0.7.2", default-features = false, features = ["rlp"] }
web3 = "0.18.0"
lazy_static = "1.4.0"
serde_json = "1.0"
indicatif = "0.14"

[features]
default = []
expensive_tests = []