[package]
name = "eth-client"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
repository.workspace = true

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.2-rust-1.84.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:b41cb89907f92b114da9e2be4e109bff30ab792c22ddcbd2a4cff8e340cb9acb"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types = { path = "../eth-types", default-features = false }
near-sdk.workspace = true
borsh.workspace = true
rlp = "0.5.2"
primal = "0.2.3"
arrutil = "0.1.2"
ethash = { git = "https://github.com/aurora-is-near/rust-ethash", tag = "0.2.0", default-features = false }
hex = "0.4.0"
rustc-hex = "2.1.0"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# serde's Serialize and Deserialize traits are required for `near_bindgen` macro for non-wasm32 targets
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = "1.19"
primitive-types = { version = "0.7.2", default-features = false, features = [
    "rlp",
] }
web3 = "0.18.0"
lazy_static = "1.4.0"
serde_json = "1.0"
indicatif = "0.14"

[features]
default = []
expensive_tests = []
