[package]
name = "eth-prover"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types = { path = "../eth-types", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-sdk = "4.1.1"
borsh = "0.9.3"
rlp = "0.5.2"
hex = "0.4.2"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", rev = "8920f9a72631f1b224ed93405640bc062f2a0191" }

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.14"
lazy_static = "*"
near-crypto = "0.16.0"
near-primitives = "0.16.0"
workspaces = "0.6.0"
tokio = { version = "1.18.1", features = ["full"] }

[features]
default = []
expensive_tests = []
